// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobErrors /> should render properly with job errors 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-3"
    >
      Job Details
    </h2>
  </div>,
  <JobErrorsContent />,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-34 {
  height: auto;
}

.emotion-26 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-26 tr {
  background-color: #252525;
}

.emotion-26 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-26 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-26 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-26 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-26 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-26 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-26 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-26 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(0) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  alignt-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 8px;
}

.emotion-8 span {
  padding-left: 12px;
  font-weight: 500;
}

.emotion-10 {
  position: relative;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-9:hover {
  background-color: #808080;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-28:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
}

.emotion-27 {
  color: #191919;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-29 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-30 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-32:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
}

.emotion-31 {
  color: #191919;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
    className="emotion-34"
  >
    <table
      className="emotion-26"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Error Type
          </th>
          <th
            className="emotion-0"
          >
            Phase
          </th>
          <th
            className="emotion-0"
          >
            Message
          </th>
          <th
            className="emotion-0"
          >
            File Name
          </th>
          <th
            className="emotion-0"
          >
            Processor
          </th>
          <th
            className="emotion-0"
          >
            Time
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-6"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              <svg
                color="#d6680b"
                data-file-name="errorWarning.svg"
                width={18}
              />
              <span>
                Warning
              </span>
            </div>
          </td>
          <td>
            execute
          </td>
          <td
            style={
              Object {
                "width": "55%",
              }
            }
          >
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td
            style={
              Object {
                "width": "50%",
              }
            }
          >
            gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
          </td>
          <td>
            HSVSimilarityProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              <svg
                color="#c92300"
                data-file-name="errorFatal.svg"
                width={18}
              />
              <span>
                Fatal
              </span>
            </div>
          </td>
          <td>
            execute
          </td>
          <td
            style={
              Object {
                "width": "55%",
              }
            }
          >
            NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)
          </td>
          <td
            style={
              Object {
                "width": "50%",
              }
            }
          >
            gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
          </td>
          <td>
            DuplicateDetectionProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              <svg
                color="#d6680b"
                data-file-name="errorWarning.svg"
                width={18}
              />
              <span>
                Warning
              </span>
            </div>
          </td>
          <td>
            execute
          </td>
          <td
            style={
              Object {
                "width": "55%",
              }
            }
          >
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td
            style={
              Object {
                "width": "50%",
              }
            }
          >
            gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
          </td>
          <td>
            ResNetSimilarityProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              <svg
                color="#c92300"
                data-file-name="errorFatal.svg"
                width={18}
              />
              <span>
                Fatal
              </span>
            </div>
          </td>
          <td>
            execute
          </td>
          <td
            style={
              Object {
                "width": "55%",
              }
            }
          >
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td
            style={
              Object {
                "width": "50%",
              }
            }
          >
            gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
          </td>
          <td>
            ResNetClassifyProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              <svg
                color="#d6680b"
                data-file-name="errorWarning.svg"
                width={18}
              />
              <span>
                Warning
              </span>
            </div>
          </td>
          <td>
            execute
          </td>
          <td
            style={
              Object {
                "width": "55%",
              }
            }
          >
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td
            style={
              Object {
                "width": "50%",
              }
            }
          >
            gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
          </td>
          <td>
            FaceRecognitionProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              <svg
                color="#d6680b"
                data-file-name="errorWarning.svg"
                width={18}
              />
              <span>
                Warning
              </span>
            </div>
          </td>
          <td>
            execute
          </td>
          <td
            style={
              Object {
                "width": "55%",
              }
            }
          >
            NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)
          </td>
          <td
            style={
              Object {
                "width": "50%",
              }
            }
          >
            gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
          </td>
          <td>
            ImageImporter
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div
      className="emotion-33"
    >
      <button
        className="emotion-28"
        disabled={true}
        type="button"
      >
        <svg
          className="emotion-27"
          data-file-name="chevron.svg"
          width={16}
        />
      </button>
      <div
        className="emotion-29"
      >
        1
      </div>
      <div
        className="emotion-30"
      >
        of 
        1
      </div>
      <button
        className="emotion-32"
        disabled={true}
        type="button"
      >
        <svg
          className="emotion-31"
          data-file-name="chevron.svg"
          width={16}
        />
      </button>
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<JobErrors /> should render properly without job errors 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-3"
    >
      Job Details
    </h2>
  </div>,
  <JobErrorsContent />,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(0) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  height: 100%;
}

.emotion-11 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-11 tr {
  background-color: #252525;
}

.emotion-11 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-11 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-11 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-11 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-11 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-11 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-11 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-11 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-10 {
  height: 100%;
  pointer-events: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-12"
  >
    <table
      className="emotion-11"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Error Type
          </th>
          <th
            className="emotion-0"
          >
            Phase
          </th>
          <th
            className="emotion-0"
          >
            Message
          </th>
          <th
            className="emotion-0"
          >
            File Name
          </th>
          <th
            className="emotion-0"
          >
            Processor
          </th>
          <th
            className="emotion-0"
          >
            Time
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-6"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-10"
        >
          <td
            colSpan={7}
          >
            <div
              className="emotion-9"
            >
              <div
                className="emotion-8"
              >
                <svg
                  data-file-name="noJobs.svg"
                  width={200}
                />
                <div>
                  This job has no errors.
                </div>
                <div>
                  Any new error will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
